Added an own versioning system, renamed stacks, refactored the guidlines, added more defintions

--- a/src/styles/demo.html
+++ b/src/styles/demo.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="theme--default">
 
 <head>
     <meta charset="UTF-8">
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Styles Demo</title>
     <link rel="stylesheet" href="css/cn.styles.css">
-    <link rel="shortcut icon" type="image/png" href="../resources/">
+    <link rel="shortcut icon" type="image/png" href="../resources/code_null_icon_32.png">
 </head>
 
 <body>
