--- a/resources/styles/demo.html
+++ b/resources/styles/demo.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Styles Demo</title>
     <link rel="stylesheet" href="css/cn.styles.css">
-    <link rel="shortcut icon" type="image/png" href="../resources/code_null_icon_32.png">
 </head>
 
 <body>
@@ -23,7 +22,7 @@
 
         <label class="cn-radio-wrapper cn-radio-wrapper-before">
             <span class="cn-radio-input">
-                <input type="radio" value="${value}" checked name="cn-radio">
+                <input type="radio" value="radio 1" checked name="cn-radio">
                 <span class="cn-radio-control"></span>
             </span>
             <span class="cn-radio-label">Label 1</span>
@@ -31,7 +30,7 @@
 
         <label class="cn-radio-wrapper cn-radio-wrapper-before">
             <span class="cn-radio-input">
-                <input type="radio" value="${value}" name="cn-radio">
+                <input type="radio" value="radio 2" name="cn-radio">
                 <span class="cn-radio-control"></span>
             </span>
             <span class="cn-radio-label">Label 2</span>
